--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <nav>
                 <ul>
                     <li><a href="#">INICIO</a></li>
-                    <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
+                    <li><a href="pareshtml.html">HTML</a></li>
+                    <li><a href="parescss.html">CSS</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,19 +25,24 @@
             <div class="box dns">
                 <h2>DNS</h2>
                 <p>Nos permite hablar con los servidores en internet sin necesidad de aprendernos sus direcciones IP.</p>
+                <img src="./pics/DNS_logo.png" alt="DNS Logo" class="logos">
             </div>
             <div class="box html">
                 <h2>HTML</h2>
                 <p>Lenguaje de marcado con el que declaramos la estructura de una página web. Consiste de elementos anidados y cada elemento tiene unos atributos que permiten modificar su comportamiento.</p>
+                <img src="./pics/128px-HTML5_logo_resized.svg.png" alt="HTML Logo" class="logos">
             </div>
             <div class="box tcpip">
                 <h2>TCP/IP</h2>
                 <p>TCP/IP es un conjunto de protocolos de red que permiten la comunicación entre dispositivos informáticos, incluyendo ordenadores y otros dispositivos, en una red o entre redes, incluyendo la Internet.</p>
+                <img src="./pics/Aha-Soft-Free-Global-Security-Global-Network.512.png" alt="TCP/IP Logo" class="logos">
             </div>
             <div class="box css">
                 <h2>CSS</h2>
                 <p>Es un lenguaje de estilos que nos permite definir cómo queremos que se vea nuestra página. CSS se encarga de definir cómo debe ser renderizado el elemento estructurado en la pantalla.</p>
+                <img src="./pics/w3_css-official.svg" alt="DNS Logo" class="logos">
             </div>
+
         </section>
 
         <footer>
