--- a/parescss.html
+++ b/parescss.html
@@ -15,8 +15,8 @@
             <span class="subtitle">HTML + CSS</span>
             <nav>
                 <ul>
-                    <li><a href="#">INICIO</a></li>
-                    <li><a href="#">HTML</a></li>
+                    <li><a href="index.html">INICIO</a></li>
+                    <li><a href="pareshtml.html">HTML</a></li>
                     <li><a href="#">CSS</a></li>
                 </ul>
             </nav>
