--- a/pareshtml.html
+++ b/pareshtml.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Victor Manuel Arbeláez Ramírez">
+    <meta name="description" content="Parcial 1 de Desarrollo de Aplicaciones Web 2024-2 UDEA" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Parcial - Desarrollo de Aplicaciones Web</title>
     <link rel="stylesheet" href="./css/pareshtml.css">
@@ -13,9 +15,9 @@
             <span class="subtitle">HTML + CSS</span>
             <nav>
                 <ul>
-                    <li><a href="#">INICIO</a></li>
+                    <li><a href="index.html">INICIO</a></li>
                     <li><a href="#">HTML</a></li>
-                    <li><a href="#">CSS</a></li>
+                    <li><a href="parescss.html">CSS</a></li>
                 </ul>
             </nav>
         </header>
@@ -27,7 +29,7 @@
         </section>
 
         <footer>
-            <p>Desarrollado Por: <strong>Emanuel Montoya</strong></p>
+            <p>Desarrollado Por: <strong>Victor Manuel Arbeláez Ramírez</strong></p>
             <p>Universidad De Antioquia</p>
             <p>2024-2</p>
         </footer>
