Se corrigen los ultimos detalles de las paginas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="container">
         <header>
             <h1>Primer Parcial Desarrollo De Aplicaciones Web (Par)</h1>
+            <span class="subtitle">HTML + CSS</span>
             <nav>
                 <ul>
                     <li><a href="#">INICIO</a></li>
@@ -46,7 +47,7 @@
         </section>
 
         <footer>
-            <p>Desarrollado Por: <strong>Victor Manuel Arbeláez Ramírez</strong></p>
+            <p>Desarrollado Por: <strong><i>Victor Manuel Arbeláez Ramírez</i></strong></p>
             <p>Universidad De Antioquia</p>
             <p>2024-2</p>
         </footer>
