--- a/pareshtml.html
+++ b/pareshtml.html
@@ -29,7 +29,7 @@
         </section>
 
         <footer>
-            <p>Desarrollado Por: <strong>Victor Manuel Arbeláez Ramírez</strong></p>
+            <p>Desarrollado Por: <strong><i>Victor Manuel Arbeláez Ramírez</i></strong></p>
             <p>Universidad De Antioquia</p>
             <p>2024-2</p>
         </footer>
