--- a/parescss.html
+++ b/parescss.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer Parcial - Desarrollo de Aplicaciones Web</title>
     <link rel="stylesheet" href="./css/parescss.css">
+    <link rel="icon" href="./pics/favicon-32x32.png" type="image/png">
 </head>
 <body>
     <div class="container">
