Estructura inicial para el modulo del script con consultas a la API

--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
+        <meta name="author" content="Victor Manuel Arbeláez Ramírez">
+        <meta name="description" content="Parcial 2 para Desarrollo de Aplicaciones Web">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>API CRUD App</title>
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
     <header>
-        <h1>Listado de Usuarios/Foods</h1>
+        <h1>Listado de Usuarios</h1>
     </header>
     <main>
         <section id="item-list"></section>
