Se modifican los estilos de la pagina

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Parcial 2 para Desarrollo de Aplicaciones Web">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>API CRUD App</title>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
     <header>
@@ -15,11 +15,11 @@
     <main>
         <section id="item-list"></section>
         <section id="form-section">
-        <form id="item-form">
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" required>
-            <button type="submit">Guardar</button>
-        </form>
+            <form id="item-form">
+                <label for="name">Nombre:</label>
+                <input type="text" id="name" name="name" required>
+                <button type="submit">Guardar</button>
+            </form>
         </section>
     </main>
     <script type="module" src="js/main.js"></script>
